# easyocr_ros

./: .ci.rosinstall.kinetic  .travis.rosinstall  .travis.yml  CMakeLists.txt  README.md  fc.rosinstall  fc.rosinstall.kinetic  package.xml  requirements.txt  requirements.txt.kinetic
.github/workflows/: main.yml
launch/: easyocr.launch
node_scripts/: easyocr_node.py
