<?xml version="1.0"?>
<package format="2">
  <name>easyocr_ros</name>
  <version>0.0.0</version>
  <description>The easyocr_ros package</description>
  <license>BSD</license>
  <url type="website">http://wiki.ros.org/easyocr_ros</url>

  <maintainer email="shingogo.5511@gmail.com">Shingo Kitagawa</maintainer>
  <author email="shingogo.5511@gmail.com">Shingo Kitagawa</author>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>python3-catkin-pkg-modules</buildtool_depend>
  <build_depend>catkin_virtualenv</build_depend>
  <exec_depend>jsk_recognition_msgs</exec_depend>
  <exec_depend>jsk_topic_tools</exec_depend>
  <exec_depend>python3-rospkg-modules</exec_depend>
  <exec_depend>python3-empy</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-setuptools</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <export>
    <pip_requirements>requirements.txt</pip_requirements>
  </export>
</package>
